[devkit] dropping dysfunctional check from `DevKitApplicationPatcher`
Platform-wide `--add-opens` parameters should be added by the patcher; individual run configuration can provide product-specific ones.

GitOrigin-RevId: 0f1aab945ecd0e498f56f43abceee64fcf10e9c2